Fix formatting issues

--- a/_pages/teaching.html
+++ b/_pages/teaching.html
@@ -7,6 +7,8 @@ author_profile: true
 
 {% include base_path %}
 
+<div id="date_last_modified" class="small text-center text-muted mb-4" data-path="_teaching"></div>
+
 {% assign num_theses = site.teaching | where_exp: "post", "post.type contains 'thesis'" | size %}
 {% assign num_courses = site.teaching | where_exp: "post", "post.type contains 'course'" | size %}
 
